--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <div class="showcase-form card">
         <h2>Let Us Evaluate Your Network</h2>
-        <form action="" id="form-1">
+        <form name="contact" method="POST" data-netlify="true">
           <div class="form-control">
             <input type="text" name="name" placeholder="Name" required>
           </div>
