--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <div class="showcase-form card">
         <h2>Let Us Evaluate Your Network</h2>
         <form name="contact" method="POST" data-netlify="true">
+          <input type="hidden" name="form-name" value="contact">
           <div class="form-control">
             <input type="text" name="name" placeholder="Name" required>
           </div>
